crates/tui/tests/storybook/snapshots/chrome::border_top_with_title_no_corners.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
..................
.─messages───.....
.content     .....
.            .....
..................
