crates/tui/tests/storybook/snapshots/chrome::title_truncates_in_narrow_border.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
..................
.┌this is ┐.......
.│content │.......
.└────────┘.......
..................
