crates/tui/tests/storybook/snapshots/layout::splits_chrome_does_not_paint_border.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---

 inside the (un-)bordered pan
