crates/tui/tests/storybook/snapshots/layout::vbox_max_clamps_pane_height.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
capped at 2 rows tal

rest
