crates/tui/tests/storybook/snapshots/layout::vbox_mixed_length_fill_and_min.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
header line

body min line

foot fill
