crates/tui/tests/storybook/snapshots/layout::vbox_nested_in_hbox.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
sidebar   main top



          main bottom
