crates/tui/tests/storybook/snapshots/layout::vbox_overflow_clamps_content.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
aaa one
aaa two
aaa three
bbb one
bbb two
bbb three
