crates/tui/tests/storybook/snapshots/layout::vbox_three_panes.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
top pane

middle pane



bottom pane
