crates/tui/tests/storybook/snapshots/overlays::anchor_clamped_when_offscreen.snap
---
source: crates/tui/tests/storybook/mod.rs
assertion_line: 186
expression: frame.text()
---
1...1...1...1...1.╭OOB───────╮
2...2...2...2...2.│OOB       │
3...3...3...3...3.│+++++     │
4...4...4...4...4.╰──────────╯
5...5...5...5...5...5...5...5
6...6...6...6...6...6...6...6
