crates/tui/tests/storybook/snapshots/overlays::anchor_screen_at_topleft_corner.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
1...1...1...1...1...1...1...1.
2╭TL────╮...2...2...2...2...2.
3│TL    │...3...3...3...3...3.
4│+++++ │...4...4...4...4...4.
5╰──────╯...5...5...5...5...5.
6...6...6...6...6...6...6...6.
7...7...7...7...7...7...7...7.
8...8...8...8...8...8...8...8.
