crates/tui/tests/storybook/snapshots/overlays::anchor_screen_at_topright_corner.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
1...1...1...1...1...1...1...1.
2...2...2...2...2...2╭TR────╮.
3...3...3...3...3...3│TR    │.
4...4...4...4...4...4│+++++ │.
5...5...5...5...5...5╰──────╯.
6...6...6...6...6...6...6...6.
7...7...7...7...7...7...7...7.
8...8...8...8...8...8...8...8.
